IGNITE-7926 Java 9 in Web agent.